RESOLVED FIXED 107159
Stop the background parser when canceling parsing to avoid crashing on many layout tests
https://bugs.webkit.org/show_bug.cgi?id=107159
Summary Stop the background parser when canceling parsing to avoid crashing on many l...
Eric Seidel (no email)
Reported 2013-01-17 12:32:19 PST
Stop the background parser when canceling parsing to avoid crashing on many layout tests:w
Attachments
Patch (1.38 KB, patch)
2013-01-17 12:33 PST, Eric Seidel (no email)
no flags
Patch for landing (1.42 KB, patch)
2013-01-17 13:06 PST, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2013-01-17 12:33:20 PST
WebKit Review Bot
Comment 2 2013-01-17 12:59:57 PST
Comment on attachment 183246 [details] Patch Rejecting attachment 183246 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: o-rtti -fno-threadsafe-statics -fvisibility-inlines-hidden -Wsign-compare -c ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp -o obj/Source/WebCore/html/parser/webcore_html.HTMLDocumentParser.o ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp: In member function 'virtual void WebCore::HTMLDocumentParser::stopParsing()': ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:134: error: 'stopBackgroundParser' was not declared in this scope ninja: build stopped: subcommand failed. Full output: http://queues.webkit.org/results/15943107
Eric Seidel (no email)
Comment 3 2013-01-17 13:00:20 PST
I guess the rest hasnt' been upstreamed yet?
Eric Seidel (no email)
Comment 4 2013-01-17 13:01:44 PST
Oh, this needs enable wraps.
Eric Seidel (no email)
Comment 5 2013-01-17 13:06:16 PST
Created attachment 183251 [details] Patch for landing
WebKit Review Bot
Comment 6 2013-01-17 14:54:17 PST
Comment on attachment 183251 [details] Patch for landing Clearing flags on attachment: 183251 Committed r140050: <http://trac.webkit.org/changeset/140050>
WebKit Review Bot
Comment 7 2013-01-17 14:54:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.