Stop the background parser when canceling parsing to avoid crashing on many layout tests https://bugs.webkit.org/show_bug.cgi?id=107159

Reviewed by Adam Barth.

Covered by many existing tests.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::stopParsing):


Canonical link: https://commits.webkit.org/125416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140050 268f45cc-cd09-0410-ab3c-d52691b4dbfc